tests/parser/syntax-errors/expected-expr/expected_expr_index_expr.choc
# RUN: choco-opt "%s" | filecheck "%s"

a[]

# CHECK:      SyntaxError (line 3, column 3): Expected expression.
# CHECK-NEXT: >>>a[]
# CHECK-NEXT: >>>--^
